Curso SRE Alura - Modulo 001 - Aula 02 - Configurando o ambiente