@@ -125,3 +125,288 @@ fernando@debian10x64:~/cursos$
 
 
 - Instalando o "Extension Pack for Java" no VSCODE
+
+- Garantir que as portas 3306 e 6379 não estejam sendo usadas na VM, porque o projeto vai usar elas no Docker
+
+
+- VERSÕES
+validar versões do Docker, Docker-compose, Java
+
+[04:58] "Docker version 20.10.7, built 20.10.7-0ubuntu5-18.04.04.3" - essa é a versão do Docker que estou utilizando e também tem a versão do docker-compose --version: "docker-compose version 1.29.2, built 5becea4c". É importante que você tenha uma versão igual ou superior à minha. Se for muito superior, se tiver mudado alguma coisa, você pode encontrar algum conflito, mas aí você pode comunicar o fórum ou pode fazer downgrade da versão e resolver o problema.
+
+$
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana$ docker -v
+Docker version 20.10.10, build b485636
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana$
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana$ docker-compose --version
+docker-compose version 1.29.2, build 5becea4c
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana$
+
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana$ java -version
+openjdk version "11.0.16" 2022-07-19
+OpenJDK Runtime Environment (build 11.0.16+8-post-Debian-1deb10u1)
+OpenJDK 64-Bit Server VM (build 11.0.16+8-post-Debian-1deb10u1, mixed mode, sharing)
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana$
+
+
+
+- Subindo stack de MYSQL e REDIS:
+
+docker-compose up
+
+~~~~bash
+mysql-forum-api    | 2022-11-06T16:49:35.792599Z 0 [Warning] Insecure configuration for --pid-file: Location '/var/run/mysqld' in the path is accessible to all OS users. Consider choosing a different directory.
+mysql-forum-api    | 2022-11-06T16:49:35.805938Z 0 [Note] Event Scheduler: Loaded 0 events
+mysql-forum-api    | 2022-11-06T16:49:35.806357Z 0 [Note] mysqld: ready for connections.
+mysql-forum-api    | Version: '5.7.40'  socket: '/var/run/mysqld/mysqld.sock'  port: 3306  MySQL Community Server (GPL)
+~~~~
+
+
+
+
+
+cd /home/fernando/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana
+
+
+[08:05] Está terminando aqui. Só esperar, subiu, deu até o versionamento aqui e ele está esperando por conexões. Eu vou abrir o meu Terminal e vou entrar em app/, com cd app/. Em app/, vou rodar o comando mvn clean package.
+
+
+
+
+- Buildando aplicação e validando se está tudo ok
+
+cd /home/fernando/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app
+mvn clean package
+
+
+[09:05] Ele vai executar uma série de testes da aplicação e, se tudo passar, se estiver tudo certo, ele vai concluir esse build e vai gerar um artefato JAR. Passou, ele rodou quatro testes, nenhuma falha, nenhum erro, passou tudo, "buildou" com sucesso.
+
+
+
+
+- Local
+
+~~~~bash
+[INFO] Replacing main artifact with repackaged archive
+[INFO] ------------------------------------------------------------------------
+[INFO] BUILD SUCCESS
+[INFO] ------------------------------------------------------------------------
+[INFO] Total time:  56.468 s
+[INFO] Finished at: 2022-11-06T13:52:44-03:00
+[INFO] ------------------------------------------------------------------------
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app$
+~~~~
+
+
+
+
+
+
+
+
+- Terminado o build, vamos subir a aplicação com o Script start.sh
+
+~~~~bash
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app$
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app$ ls
+Dockerfile  mvnw  mvnw.cmd  pom.xml  src  start.sh  target
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app$ cat start.sh
+#!/bin/bash
+
+java -jar -Xms128M -Xmx128M -XX:PermSize=64m -XX:MaxPermSize=128m -Dspring.profiles.active=prod target/forum.jarfernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app$
+~~~~
+
+
+
+
+
+
+
+
+
+
+~~~~bash
+fernando@debian10x64:~/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app$ sh start.sh
+OpenJDK 64-Bit Server VM warning: Ignoring option PermSize; support was removed in 8.0
+OpenJDK 64-Bit Server VM warning: Ignoring option MaxPermSize; support was removed in 8.0
+
+  .   ____          _            __ _ _
+ /\\ / ___'_ __ _ _(_)_ __  __ _ \ \ \ \
+( ( )\___ | '_ | '_| | '_ \/ _` | \ \ \ \
+ \\/  ___)| |_)| | | | | || (_| |  ) ) ) )
+  '  |____| .__|_| |_|_| |_\__, | / / / /
+ =========|_|==============|___/=/_/_/_/
+ :: Spring Boot ::        (v2.3.1.RELEASE)
+
+2022-11-06 13:57:23.181  INFO 33137 --- [           main] br.com.alura.forum.ForumApplication      : Starting ForumApplication v0.0.1-SNAPSHOT on debian10x64 with PID 33137 (/home/fernando/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app/target/forum.jar started by fernando in /home/fernando/cursos/sre-alura/observabilidade-coletando-metricas-com-prometheus/prometheus-grafana/app)
+2022-11-06 13:57:23.185  INFO 33137 --- [           main] br.com.alura.forum.ForumApplication      : The following profiles are active: prod
+2022-11-06 13:57:24.930  INFO 33137 --- [           main] .s.d.r.c.RepositoryConfigurationDelegate : Multiple Spring Data modules found, entering strict repository configuration mode!
+2022-11-06 13:57:24.933  INFO 33137 --- [           main] .s.d.r.c.RepositoryConfigurationDelegate : Bootstrapping Spring Data JPA repositories in DEFERRED mode.
+
+2022-11-06 13:57:29.876  INFO 33137 --- [           main] pertySourcedRequestMappingHandlerMapping : Mapped URL path [/v2/api-docs] onto method [springfox.documentation.swagger2.web.Swagger2Controller#getDocumentation(String, HttpServletRequest)]
+2022-11-06 13:57:30.842  INFO 33137 --- [           main] o.s.b.w.embedded.tomcat.TomcatWebServer  : Tomcat started on port(s): 8080 (http) with context path ''
+2022-11-06 13:57:30.844  INFO 33137 --- [           main] d.s.w.p.DocumentationPluginsBootstrapper : Context refreshed
+2022-11-06 13:57:30.849  INFO 33137 --- [         task-1] o.h.e.t.j.p.i.JtaPlatformInitiator       : HHH000490: Using JtaPlatform implementation: [org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform]
+2022-11-06 13:57:30.866  INFO 33137 --- [         task-1] j.LocalContainerEntityManagerFactoryBean : Initialized JPA EntityManagerFactory for persistence unit 'default'
+2022-11-06 13:57:30.896  INFO 33137 --- [           main] d.s.w.p.DocumentationPluginsBootstrapper : Found 1 custom documentation plugin(s)
+2022-11-06 13:57:30.976  INFO 33137 --- [           main] s.d.s.w.s.ApiListingReferenceScanner     : Scanning for api listing references
+2022-11-06 13:57:31.379  INFO 33137 --- [           main] DeferredRepositoryInitializationListener : Triggering deferred initialization of Spring Data repositories…
+2022-11-06 13:57:31.987  INFO 33137 --- [           main] DeferredRepositoryInitializationListener : Spring Data repositories initialized!
+2022-11-06 13:57:31.999  INFO 33137 --- [           main] br.com.alura.forum.ForumApplication      : Started ForumApplication in 9.6 seconds (JVM running for 10.281)
+~~~~
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+- Acessando
+
+
+<192.168.0.113:8080/topicos>
+192.168.0.113:8080/topicos
+
+
+	
+content	
+0	
+id	3
+titulo	"Duvida 3"
+mensagem	"Tag HTML"
+dataCriacao	"2019-05-05T17:00:00"
+1	
+id	2
+titulo	"Duvida 2"
+mensagem	"Projeto nao compila"
+dataCriacao	"2019-05-05T16:00:00"
+2	
+id	1
+titulo	"Duvida 1"
+mensagem	"Erro ao criar projeto"
+dataCriacao	"2019-05-05T15:00:00"
+pageable	
+sort	
+sorted	true
+unsorted	false
+empty	false
+offset	0
+pageNumber	0
+pageSize	10
+paged	true
+unpaged	false
+totalPages	1
+totalElements	3
+last	true
+size	10
+number	0
+sort	
+sorted	true
+unsorted	false
+empty	false
+first	true
+numberOfElements	3
+empty	false
+
+
+
+
+
+
+
+
+
+
+- Também é possível acessar os tópicos por id
+
+<http://192.168.0.113:8080/topicos/1>
+http://192.168.0.113:8080/topicos/1
+
+fernando@debian10x64:~$ curl -v http://192.168.0.113:8080/topicos/1
+* Expire in 0 ms for 6 (transfer 0x5641825e1fb0)
+*   Trying 192.168.0.113...
+* TCP_NODELAY set
+* Expire in 200 ms for 4 (transfer 0x5641825e1fb0)
+* Connected to 192.168.0.113 (192.168.0.113) port 8080 (#0)
+> GET /topicos/1 HTTP/1.1
+> Host: 192.168.0.113:8080
+> User-Agent: curl/7.64.0
+> Accept: */*
+>
+< HTTP/1.1 200
+< X-Content-Type-Options: nosniff
+< X-XSS-Protection: 1; mode=block
+< Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+< Pragma: no-cache
+< Expires: 0
+< X-Frame-Options: DENY
+< Content-Type: application/json
+< Transfer-Encoding: chunked
+< Date: Sun, 06 Nov 2022 17:06:01 GMT
+<
+* Connection #0 to host 192.168.0.113 left intact
+{"id":1,"titulo":"Duvida 1","mensagem":"Erro ao criar projeto","dataCriacao":"2019-05-05T15:00:00","nomeAutor":"Aluno","status":"NAO_RESPONDIDO","respostas":[]}fernando@debian10x64:~$
+
+
+
+
+fernando@debian10x64:~$ curl -v http://192.168.0.113:8080/topicos/2
+* Expire in 0 ms for 6 (transfer 0x5601f9512fb0)
+*   Trying 192.168.0.113...
+* TCP_NODELAY set
+* Expire in 200 ms for 4 (transfer 0x5601f9512fb0)
+* Connected to 192.168.0.113 (192.168.0.113) port 8080 (#0)
+> GET /topicos/2 HTTP/1.1
+> Host: 192.168.0.113:8080
+> User-Agent: curl/7.64.0
+> Accept: */*
+>
+< HTTP/1.1 200
+< X-Content-Type-Options: nosniff
+< X-XSS-Protection: 1; mode=block
+< Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+< Pragma: no-cache
+< Expires: 0
+< X-Frame-Options: DENY
+< Content-Type: application/json
+< Transfer-Encoding: chunked
+< Date: Sun, 06 Nov 2022 17:09:01 GMT
+<
+* Connection #0 to host 192.168.0.113 left intact
+{"id":2,"titulo":"Duvida 2","mensagem":"Projeto nao compila","dataCriacao":"2019-05-05T16:00:00","nomeAutor":"Aluno","status":"NAO_RESPONDIDO","respostas":[]}fernando@debian10x64:~$
+fernando@debian10x64:~$
+fernando@debian10x64:~$
+fernando@debian10x64:~$
+fernando@debian10x64:~$
+fernando@debian10x64:~$
+fernando@debian10x64:~$ curl -v http://192.168.0.113:8080/topicos/3
+* Expire in 0 ms for 6 (transfer 0x5650b17b0fb0)
+*   Trying 192.168.0.113...
+* TCP_NODELAY set
+* Expire in 200 ms for 4 (transfer 0x5650b17b0fb0)
+* Connected to 192.168.0.113 (192.168.0.113) port 8080 (#0)
+> GET /topicos/3 HTTP/1.1
+> Host: 192.168.0.113:8080
+> User-Agent: curl/7.64.0
+> Accept: */*
+>
+< HTTP/1.1 200
+< X-Content-Type-Options: nosniff
+< X-XSS-Protection: 1; mode=block
+< Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+< Pragma: no-cache
+< Expires: 0
+< X-Frame-Options: DENY
+< Content-Type: application/json
+< Transfer-Encoding: chunked
+< Date: Sun, 06 Nov 2022 17:09:03 GMT
+<
+* Connection #0 to host 192.168.0.113 left intact
+{"id":3,"titulo":"Duvida 3","mensagem":"Tag HTML","dataCriacao":"2019-05-05T17:00:00","nomeAutor":"Aluno","status":"NAO_RESPONDIDO","respostas":[]}fernando@debian10x64:~$
